# nautobot-plugin-ssot-device42

./: .bandit.yml  .flake8  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  GETTING_STARTED.md  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  upstream_testing.yml
.gitlab/: CODEOWNERS
.gitlab/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
development/: Dockerfile  creds.example.env  dev.env  docker-compose.base.yml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.docs.yml  nautobot_config.py
docs/: index.md
nautobot_device42_sync/: __init__.py  constant.py  diff.py  jobs.py  urls.py
nautobot_device42_sync/api/: __init__.py
nautobot_device42_sync/diffsync/: d42utils.py  nbutils.py
nautobot_device42_sync/diffsync/from_d42/: device42.py  models.py  nautobot.py
nautobot_device42_sync/diffsync/from_d42/models/: __init__.py  circuits.py  dcim.py  ipam.py
nautobot_device42_sync/tests/: __init__.py  test_api.py  test_basic.py
nautobot_device42_sync/utils/: device42.py  nautobot.py
nautobot_ssot_device42/: __init__.py  constant.py  jobs.py  urls.py
nautobot_ssot_device42/api/: __init__.py
nautobot_ssot_device42/diffsync/adapters/: device42.py  nautobot.py
nautobot_ssot_device42/diffsync/from_d42/: device42.py  nautobot.py
nautobot_ssot_device42/diffsync/from_d42/models/: __init__.py  assets.py  circuits.py  dcim.py  ipam.py
nautobot_ssot_device42/diffsync/models/: __init__.py
nautobot_ssot_device42/diffsync/models/base/: assets.py  dcim.py  ipam.py
nautobot_ssot_device42/diffsync/models/nautobot/: assets.py  circuits.py  dcim.py  ipam.py
nautobot_ssot_device42/tests/: __init__.py  test_api.py  test_basic.py  test_utils_device42.py
nautobot_ssot_device42/tests/fixtures/: get_all_custom_fields_recv.json  get_buildings.json  get_buildings_recv.json  get_cluster_members_recv.json  get_cluster_members_sent.json  get_devices_recv.json  get_devices_sent.json  get_ip_addrs.json  get_ipaddr_custom_fields_recv.json  get_ipaddr_default_custom_fields_recv.json  get_patch_panel_pks_recv.json  get_patch_panel_pks_sent.json  get_patch_panels.json  get_port_custom_fields_recv.json  get_ports_with_vlans_recv.json  get_ports_with_vlans_sent.json  get_ports_wo_vlans_recv.json  get_racks.json  get_racks_recv.json  get_rooms.json  get_rooms_recv.json  get_subnet_custom_fields_recv.json  get_subnet_default_custom_fields_recv.json  get_vlan_info_recv.json  get_vlans_with_location.json  get_vrfgroups_recv.json  get_vrfgroups_sent.json  merged_ports.json  ports_wo_vlans.json
nautobot_ssot_device42/tests/unit/: test_api.py  test_basic.py  test_device42_adapter.py  test_utils_device42.py  test_utils_nautobot.py
nautobot_ssot_device42/utils/: device42.py  nautobot.py
